cabal-version:   3.0
name:            tree-edit
version:         0.1.0.0
synopsis:        Manipulating file system

-- description:
homepage:        https://github.com/Futarimiti/tree-edit
license:         MIT
license-file:    LICENSE
author:          Futar
maintainer:      Futarimiti@163.com

-- copyright:
category:        System
build-type:      Simple
extra-doc-files: none

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    PatternSynonyms
    StrictData
    TypeApplication
    ViewPatterns

  -- cabal-fmt: expand lib
  exposed-modules:

  -- other-modules:
  -- other-extensions:
  build-depends:      base
  hs-source-dirs:     lib
  default-language:   GHC2021

executable tree-edit
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , tree-edit

  hs-source-dirs:   app
  default-language: GHC2021

test-suite tree-edit-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , HUnit
    , tree-edit
