cabal-version:   3.0
name:            tree-edit
version:         0.1.0.0
synopsis:        Manipulating file system

-- description:
homepage:        https://github.com/Futarimiti/tree-edit
license:         MIT
license-file:    LICENSE
author:          Futar
maintainer:      Futarimiti@163.com

-- copyright:
category:        System
build-type:      Simple
extra-doc-files: none
data-dir:        resources/

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    PatternSynonyms
    StrictData
    TemplateHaskell
    TypeApplications
    TypeFamilies
    ViewPatterns

  -- cabal-fmt: expand lib
  exposed-modules:
    Paths_tree_edit
    System.File.Basename
    System.File.Basename.Parse
    System.File.Basename.Type
    System.File.Edit
    System.File.Edit.Type
    System.File.Tree
    System.File.Tree.Decode
    System.File.Tree.Decode.Type
    System.File.Tree.Encode
    System.File.Tree.Encode.Type
    System.File.Tree.Exceptions
    System.File.Tree.IO
    System.File.Tree.Type

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , containers
    , directory
    , exceptions
    , filepath
    , monad-logger
    , mtl
    , temporary
    , text
    , transformers
    , typed-process
    , yaml

  hs-source-dirs:     lib
  default-language:   GHC2021

executable tree-edit
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , monad-logger
    , optparse-applicative
    , tree-edit

  hs-source-dirs:   app
  default-language: GHC2021

test-suite tree-edit-test
  import:             warnings
  default-language:   GHC2021
  other-modules:
    Paths_tree_edit
    System.File.Basename.Parse
    System.File.Tree.IO

  default-extensions:
    MultiWayIf
    PackageImports

  -- other-extensions:
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , base
    , containers
    , exceptions
    , HUnit
    , monad-logger
    , tree-edit
