cabal-version:   3.0
name:            tree-edit
version:         0.1.0.0
synopsis:        Manipulating file system

-- description:
homepage:        https://github.com/Futarimiti/tree-edit
license:         MIT
license-file:    LICENSE
author:          Futar
maintainer:      Futarimiti@163.com

-- copyright:
category:        System
build-type:      Simple
extra-doc-files: none
data-dir:        resources/

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    PatternSynonyms
    StrictData
    TemplateHaskell
    TypeApplications
    TypeFamilies
    ViewPatterns

  -- cabal-fmt: expand lib
  exposed-modules:
    Paths_tree_edit
    System.File.Basename
    System.File.Basename.Parse
    System.File.Basename.Type
    System.File.Edit
    System.File.Edit.Type
    System.File.Tree
    System.File.Tree.Decode
    System.File.Tree.Decode.Type
    System.File.Tree.Encode
    System.File.Tree.Encode.Type
    System.File.Tree.Encode.Yaml
    System.File.Tree.Encode.Yaml.Config
    System.File.Tree.Exceptions
    System.File.Tree.IO
    System.File.Tree.Type

  autogen-modules:    Paths_tree_edit

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson          >=2.2.3   && <2.3
    , base           >=4.17.2  && <4.18
    , containers     >=0.6.7   && <0.7
    , directory      >=1.3.7   && <1.4
    , exceptions     >=0.10.5  && <0.11
    , filepath       >=1.4.2   && <1.5
    , monad-logger   >=0.3.40  && <0.4
    , mtl            >=2.2.2   && <2.3
    , temporary      >=1.3     && <1.4
    , text           >=2.0.2   && <2.1
    , transformers   >=0.5.6   && <0.6
    , typed-process  >=0.2.11  && <0.3
    , vector         >=0.13.1  && <0.14
    , yaml           >=0.11.11 && <0.12

  hs-source-dirs:     lib
  default-language:   GHC2021

executable tree-edit
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base                  >=4.17.2 && <4.18
    , monad-logger          >=0.3.40 && <0.4
    , optparse-applicative  >=0.18.1 && <0.19
    , tree-edit

  hs-source-dirs:   app
  default-language: GHC2021

test-suite tree-edit-test
  import:             warnings
  default-language:   GHC2021
  other-modules:
    Paths_tree_edit
    System.File.Basename.Parse
    System.File.Tree.IO
    System.File.Tree.Type

  default-extensions:
    MultiWayIf
    PackageImports

  -- other-extensions:
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , aeson         >=2.2.3  && <2.3
    , base          >=4.17.2 && <4.18
    , containers    >=0.6.7  && <0.7
    , exceptions    >=0.10.5 && <0.11
    , HUnit
    , monad-logger  >=0.3.40 && <0.4
    , text          >=2.0.2  && <2.1
    , tree-edit
    , vector        >=0.13.1 && <0.14
